# split2040-fw

./: .gitignore  CMakeLists.txt  flash.sh
src/: color.c  color.h  combo.c  combo.h  descriptors.h  doubletap.c  doubletap.h  hex2a.h  hid.h  keyboard.c  keyboard.h  layers.c  layers.h  leds.c  leds.h  ll_alloc.c  ll_alloc.h  macro.c  macro.h  main.c  matrix.c  matrix.h  mouse.c  mouse.h  taphold.c  taphold.h  usb_common.h  usb_descriptors.c  usb_descriptors.h  usb_keyboard.c  ws2812.c  ws2812.h
src/machines/: machine.h
src/machines/hex2a/: configuration.h  hex2a.h  machine.c
src/machines/split2040/: configuration.h  machine.c
